Fixed the header class grid, arranged in a way that is more appealing to the eye. I also added column gap between the side bar and the rest.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "modern-normalize";
 
 :root {
   line-height: 1.5;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
 }
 
 h1, h2, h3, h4, h5, figure, p, ol, ul {
@@ -25,42 +35,181 @@ img {
 
 .container {
   display: grid;
-  grid-template-columns: 0.5fr 1.5fr;
-  grid-template-rows: 0.4fr 1.7fr
+  grid-template-columns: 0.4fr 1.5fr;
+  grid-template-rows: 0.55fr 2fr;
+  /* column-gap: 18px; */
+  min-height: 100vh;
+  background-color: white;
+  /* background-color: #E2E8F0; */
 }
+
+.header,
+.information {
+  padding-left: 60px;
+}
+
+
 
 .header {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-    
+  grid-template-columns: 1.5fr 1.15fr;
+  grid-template-rows: 1.5fr 2fr;
+  /* margin-top: 8px; */
+  background-color: white;
+}
+
+.header-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 28px;
+}
+
+.header-right > .pfp {
+}
+
+.pfp img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .search-button {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 6px;
+  /* margin-left: 48px; */
 }
 
 input[type="search"] {
   border-radius: 15px;
-  width: 400px;
-  max-width: 500px;
+  min-width: 90%;
+  max-width: 800px;
   height: 30px;
+  
 }
 
 .buttons {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  /* margin-top: 35px; */
+  gap: 26px;
+  /* margin-left: 48px;
+  margin-bottom: 48px; */
+}
+
+.buttons button {
+  width: 150px;
+  height: 40px;
+  border-radius: 25px;
+  color: white;
+  background-color: #2da6d6;
+  border: none;
+  font-weight: 700;
+  
 }
 
 .name {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  font-weight: 700;
+}
+
+.header-bottom-l {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: flex-start;
+  /* margin-top: 20px; */
+  gap: 18px;
+  /* margin-left: 48px; */
+}
+
+.header-bottom-l,
+.buttons {
+  padding-left: 10px;
+}
+
+.pfp-2 img {
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.Introduction {
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.intro-small {
+  font-size: 15px;
+}
+
+.sidebar {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  background-color: #2da6d6;
+  color: white;
+  font-weight: 700;
+  
+}
+
+.icon {
+  filter: invert(1);
+  height: 20px ;
+  width: 20px ;
+}
+
+.Pair {
+  margin-left: 20px;
+  display: grid;
+  grid-template-columns: 0.15fr 1fr;
+  /* column-gap: 18px; */
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.Pair .icon {
+  justify-self: center;
+}
+
+.Dashboard {
+  font-size: 30px;
+  margin-top: 8px;
+  margin-bottom: 30px;
+}
+
+.icon.Dashboard {
+  height: 50px;
+  width: 50px;
+  align-items: center;
+}
+
+.Pair.split {
+  margin-top: 60px;
+}
+
+.Home, .Profile, .Messages,
+.History, .Tasks, .Communities,
+.Settings, .Support, .Privacy {
+  font-size: 23px;
+}
+
+.information {
+  background-color: #E2E8F0;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3 ;
+  display: grid;
+}
+.main-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  background-color: #E2E8F0;
 }
